esp32good/build/log/idf_py_stdout_output_7152
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] C:\WINDOWS\system32\cmd.exe /C "cd /D C:\Users\Administrator\Desktop\project\esp32good\build\bootloader\esp-idf\esptool_py && C:\Users\Administrator\.espressif\python_env\idf5.5_py3.11_env\Scripts\python.exe C:/Users/Administrator/esp/v5.5.1/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x2000 C:/Users/Administrator/Desktop/project/esp32good/build/bootloader/bootloader.bin"
Bootloader binary size 0x56a0 bytes. 0x960 bytes (10%) free.
[2/9] No install step for 'bootloader'
[3/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
ccache C:\Users\Administrator\.espressif\tools\riscv32-esp-elf\esp-14.2.0_20241119\riscv32-esp-elf\bin\riscv32-esp-elf-gcc.exe -DESP_PLATFORM -DIDF_VER=\"v5.5.1\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -IC:/Users/Administrator/Desktop/project/esp32good/build/config -IC:/Users/Administrator/Desktop/project/esp32good/main -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/newlib/platform_include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/config/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/config/include/freertos -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/config/riscv/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/FreeRTOS-Kernel/portable/riscv/include/freertos -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/freertos/esp_additions/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/include/soc/esp32c5 -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/dma/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/ldo/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/debug_probe/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/power_supply/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c5/. -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/port/esp32c5/private_include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32c5/. -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_hw_support/mspi_timing_tuning/port/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/heap/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/heap/tlsf -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/log/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/soc/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/soc/esp32c5 -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/soc/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/soc/esp32c5/register -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/hal/platform_port/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/hal/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/hal/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_rom/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_rom/esp32c5/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_rom/esp32c5/include/esp32c5 -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_rom/esp32c5 -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_common/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_system/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_system/port/soc -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_system/port/include/riscv -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_system/port/include/private -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/riscv/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/spi_flash/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_driver_spi/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_pm/include -IC:/Users/Administrator/esp/v5.5.1/esp-idf/components/esp_driver_gpio/include -march=rv32imac_zicsr_zifencei  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -nostartfiles -Og -fno-shrink-wrap -fmacro-prefix-map=C:/Users/Administrator/Desktop/project/esp32good=. -fmacro-prefix-map=C:/Users/Administrator/esp/v5.5.1/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf\main\CMakeFiles\__idf_main.dir\main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c C:/Users/Administrator/Desktop/project/esp32good/main/main.c
C:/Users/Administrator/Desktop/project/esp32good/main/main.c: In function 'app_main':
C:/Users/Administrator/Desktop/project/esp32good/main/main.c:8:5: error: implicit declaration of function 'lcd_init' [-Wimplicit-function-declaration]
    8 |     lcd_init();
      |     ^~~~~~~~
[4/9] Completed 'bootloader'
ninja: build stopped: subcommand failed.
